# bane

./: .gitignore  README  README.md
examples/centersurround/: cs.erl  hexagonal.erl  imagereader.c  meta.erl  record.erl  record.hrl  simple.erl  static.erl
examples/centersurround/input/: waterfall.tif
examples/eye/: README.md  run  start_lense  start_retina  start_visual
examples/eye/centersurround/: record.hrl  retina  static.erl
examples/eye/lens/: Makefile.am  bootstrap  configure.ac  create.c  visualize.c  webcam_lense.c
examples/eye/retina/: hexagonal.erl  record.erl  run  test.erl
examples/lens/: .gitignore  Makefile.am  configure.ac  create.c  visualize.c  webcam  webcam.c  webcam_lense.c
examples/simple/: simple.erl
if/: simple.erl
lib/: net.erl
